--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "start": "next start"
   },
   "dependencies": {
+    "@enact/core": "^3.4.9",
     "next": "10.0.1",
-    "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react": "16.14.0",
+    "react-dom": "16.14.0",
+    "react-native-web": "^0.14.8"
   }
 }
